plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.somansa'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // springBoot web, JPA
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.0'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Hibernate 호환성문제
    implementation group: 'com.fasterxml', name: 'classmate', version: '1.7.0'

    // Http
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'org.jsoup:jsoup:1.15.3'

    // Faker 오늘도 숭배 해야만해....DataFake 의존성
    implementation 'net.datafaker:datafaker:2.4.1'

    // S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Mockito
    testImplementation 'org.mockito:mockito-core:4.0.0'

    // Apache POI : MS file
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    implementation 'org.apache.poi:poi-scratchpad:5.2.3'

    // ftp
    implementation 'commons-net:commons-net:3.8.0'

    // Apache Commons Pool2
    implementation 'org.apache.commons:commons-pool2:2.11.1'

    // Seida
    implementation 'org.sejda.imageio:webp-imageio:0.1.6'

    // Thumbnailator
    implementation('net.coobird:thumbnailator:0.4.14')

    // PDF
    implementation 'org.apache.pdfbox:pdfbox:2.0.29'

    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Spring Boot DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

tasks.named('test') {
    useJUnitPlatform()
}
